# SimpleTES

./: .gitignore  LICENSE  README.md  main.py  main_wizard.py  mkdocs.yml  pyproject.toml  sitecustomize.py
.github/workflows/: docs.yml
best_results/: README.md
best_results/algorithm_engineering/ahc039_purse_seine_fishing/: ahc039_purse_seine_fishing_best.cpp
best_results/algorithm_engineering/ahc058_apple_production_planning/: ahc058_apple_production_planning_best.cpp
best_results/algorithm_engineering/lasso_regularization_path/: lasso_regularization_path_best.py
best_results/combinatorial_construction/circle_packing_in_a_unit_square_n26/: circle_packing_in_a_unit_square_n26_best.py  circle_packing_in_a_unit_square_n26_best_construction.json
best_results/combinatorial_construction/circle_packing_in_a_unit_square_n32/: circle_packing_in_a_unit_square_n32_best.py  (+1 more)
datasets/ahc/: README.md  data_manifest.json  docker_runner.py  get_cache.sh  setup.sh
datasets/ahc/ahc039/: ahc039.txt  (+2 more)
datasets/autocorrelation/: pyproject.toml  requirements.txt
datasets/circle_packing/: pyproject.toml  requirements.txt
datasets/gpumode/: server_info.yaml
datasets/kernelbench/: task_generator.py
datasets/numerical_tasks/: README.md  data_manifest.json  pyproject.toml  requirements.txt  setup.sh
datasets/numerical_tasks/lasso_path/: evaluator.py  generate_results.py  init_program.py  lasso_path.txt
datasets/numerical_tasks/lasso_path/eval_data/: real_breast_cancer.npz  real_diabetes.npz  real_dna.npz  real_leukemia.npz
datasets/open_problems_bio/: README.md  data_manifest.json  openproblems_api_fix.sh  requirements.txt  setup.sh
datasets/qubit_routing/: README.md  slot_workspace.py
datasets/qubit_routing/swap_reduction/rust/: Cargo.toml
datasets/qubit_routing/swap_reduction/rust/router_cli/: Cargo.toml  build.rs
datasets/qubit_routing/swap_reduction/rust/router_cli/src/: main.rs
datasets/qubit_routing/swap_reduction/rust/router_core/: Cargo.toml
datasets/qubit_routing/swap_reduction/rust/router_core/src/: candidate.rs  lib.rs  tests.rs
datasets/qubit_routing/swap_reduction/rust/router_core/src/engine/: dense_layout.rs  disjoint_layout.rs  mod.rs  routing_target.rs
datasets/qubit_routing/swap_reduction/rust/router_core/src/engine/sabre/: dag.rs  heuristic.rs  layer.rs  layout.rs  mod.rs  route.rs
datasets/scaling_law/: data_manifest.json  prepare_dataset.py  requirements.txt
datasets/sums_diffs/: requirements.txt
datasets/znaa/: README.md  data_manifest.json  requirements.txt  setup.sh
docs/: index.html
docs/guides/: adding-tasks.md  advanced.md  architecture.md  cli-options.md  documentation.md  installation.md  quickstart.md
docs/javascripts/: mermaid-init.js
scripts/: evolve_db_registry.py  extract_run_stats.py  gather_llm_elite_dataset.py  plot_elite_history.py  plot_elite_stats.py  prepare_task.py
simpletes/: __init__.py  cli.py  config.py  construction.py  evaluator.py  generator.py  node.py
simpletes/engine/: __init__.py  checkpoint.py  core.py  runtime.py  scheduler.py
simpletes/llm/: __init__.py  litellm_client.py  types.py  vllm_forcing.py
simpletes/policies/: __init__.py  balance.py  base.py  llm_elite.py  llm_refine.py  puct.py  rpucg.py
simpletes/templates/: __init__.py  elite_context.py  elite_selection.py  generation.py  mcts_selection.py  reflection.py
simpletes/utils/: __init__.py  code_extract.py  log.py  plot_scores.py  task_prep.py  text.py
tests/: test_evolve_db_registry.py  test_per_chain_construction.py  test_reflection_policy_config.py  test_vllm_token_forcing.py
(+556 files in other folders)
