[project]
name = "simpletes"
version = "1.0.0"
description = "Evaluation-driven Scaling for Scientific Discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cython>=3.0.0",
    "litellm>=1.80.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=3.0.0",
    "protobuf>=6.33.5",
    "psutil>=7.2.2",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tenacity>=9.1.2",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.5.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["simpletes*"]
exclude = ["tests*", "datasets*", "scripts*"]
